--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
         <version>RELEASE</version>
         <scope>compile</scope>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-jdk14</artifactId>
+        <version>1.7.32</version>
+      </dependency>
     </dependencies>
     
 </project>
