--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
         <artifactId>slf4j-jdk14</artifactId>
         <version>1.7.32</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.2.3</version>
+      </dependency>
     </dependencies>
-    
 </project>
